Updated the github workflows - Separated the windows and linux builds - Added a workflow to update the documentation - fixed a missing include in the Cursor class - Minor changes in the documentation's css theme

--- a/docs/doxygen-awesome/custom-style.css
+++ b/docs/doxygen-awesome/custom-style.css
@@ -15,3 +15,9 @@ hr.footer {
 address.footer {
   margin-bottom: 5px;
 }
+
+html.dark-mode {
+  --note-color: rgb(221, 159, 0);
+  --note-color-dark: rgb(130, 94, 0);
+  --warning-color-darker: rgb(236, 205, 203);
+}
